tests/baselines/reference/parserMemberAccessorDeclaration10(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration10.ts(2,5): error TS1031: 'export' modifier cannot appear on class elements of this kind.
parserMemberAccessorDeclaration10.ts(2,16): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration10.ts (2 errors) ====
    class C {
        export get Foo() { }
        ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on class elements of this kind.
                   ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }